--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -24,10 +24,13 @@ if (flutterVersionName == null) {
 
 android {
     namespace "com.antoniojimenez.push_app"
+    //Scheduled Notifications -> compileSdkVersion 33
     compileSdkVersion flutter.compileSdkVersion
     ndkVersion flutter.ndkVersion
 
     compileOptions {
+        // Flag to enable support for the new language APIs
+        //Scheduled Notifications -> coreLibraryDesugaringEnabled true
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
